[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprite/Effect/effect_purple.png" type="Texture" id=1]
[ext_resource path="res://Script/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 8 )

[node name="EBullet" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )
SPEED = -5

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.5 )
texture = ExtResource( 1 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EBullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
